avtr mod pierwsze kroki

--- a/npkpir_23/web/admin/sub/ksiegowanie.xhtml
+++ b/npkpir_23/web/admin/sub/ksiegowanie.xhtml
@@ -30,7 +30,7 @@
             </p:panelGrid>
         </p:outputPanel>
         <p:dataTable value="#{adminKsiegowanieView.zestawienierekordow}" 
-                     var="recorda" style="max-width: 80%;height: 75vh;overflow-y: scroll;" rowKey="#{recorda.id}"
+                     var="recorda" style="max-width: 1800px;height: 75vh;overflow-y: scroll;" rowKey="#{recorda.id}"
                      sortBy="#{recorda.podatnik.printnazwa}" rowIndexVar="yndex">
                      
             <!-- id Column -->
