--- a/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
@@ -88,6 +88,7 @@
                     <p:menuitem value="importuj dokumenty z dostarczonych plików" oncomplete="PF('importinterpaper').show();" actionListener="#{dokfkView.odswiezzaksiegowaneimport}" ></p:menuitem>
                     <p:menuitem value="Zorim xml to xls/pobranie nr kontrahentów" oncomplete="PF('raportzorin').show();"  ></p:menuitem>
                     <p:menuitem value="importuj wyciągi bankowe" oncomplete="PF('importbank').show();" actionListener="#{dokfkView.odswiezzaksiegowaneimport}" ></p:menuitem>
+                    <p:menuitem value="importuj plik Amazon AVTR nowy" oncomplete="PF('importamazoncavtrmodsv').show();" actionListener="#{dokfkView.odswiezzaksiegowaneimport}" ></p:menuitem>
                     <p:menuitem value="importuj plik Amazon CSV" oncomplete="PF('importamazoncsv').show();" actionListener="#{dokfkView.odswiezzaksiegowaneimport}" ></p:menuitem>
                     <p:menuitem value="importuj plik Amazon Additional Temp. WNT/WDT" oncomplete="PF('importamazoncsvnazwy').show();" ></p:menuitem>
                     <p:menuitem value="importuj plik Amazon Taxually WNT/WDT" oncomplete="PF('importamazonTaxually').show();" ></p:menuitem>
